fix: add space in overflow property for PDF content styling

--- a/src/app/feedback/feedback-admin/qr-pdf-view/qr-pdf-view.component.css
+++ b/src/app/feedback/feedback-admin/qr-pdf-view/qr-pdf-view.component.css
@@ -2,7 +2,7 @@
   width: 595px;
   box-sizing: border-box;
   height: fit-content;
-  overflow:hidden
+  overflow: hidden;
   position: relative;
   padding: 57px;
   text-align: left;
